--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Build files
+target
+.bsp
+
+# IDE files
+.vscode
+
+# Metals
+.bloop
+.metals
+metals.sbt
